attempting overlap fix

--- a/src/main/webapp/static/css/apt-finder_list.css
+++ b/src/main/webapp/static/css/apt-finder_list.css
@@ -292,7 +292,7 @@ a {
         float: right;
         text-align: right;
         /*width: 20%;*/
-        position: relative;
+        /*position: relative;*/
         top: 50%;
         transform: translateY(-50%);
     }
@@ -331,7 +331,7 @@ a {
         width: 40%;
         float: left;
         margin-left: 5%;
-        position: relative;
+        /*position: relative;*/
         top: 50%;
         transform: translateY(-50%);
     }
@@ -452,7 +452,7 @@ a {
     
     /*The link for a listing*/
     .fullLink {
-        position: absolute;
+        /*position: absolute;*/
         width: 100%;
         height: 100%;
         top: 0;
